# omstu_web_application

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: eb28ab2e5eea_init_db.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AddCarModal.jsx  CarCard.jsx  CarList.jsx  EditCarModal.jsx  Header.jsx  SearchBar.jsx
frontend/src/services/: api.js
frontend/src/styles/: App.css  CarCard.css  CarList.css  Header.css  Modal.css  SearchBar.css
infra/: .dockerignore  Dockerfile  docker-compose.yml
src/: decorators.py  exception.py  main.py  models.py  settings.py
src/cars/: handlers.py  repository.py  schema.py  service.py
src/dealer/: handlers.py  repository.py  schema.py  service.py
src/infrastructure/database/: database.py
src/loader/: cars.py  dealers.py
src/rabbitmq/: utils.py
