[project]
name = "web-application-omstu"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Fayfer", email = "fayfer2004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4"

dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.2,<0.35.0",
    "gunicorn>=23.0.0,<24.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "pydantic>=2.11.3,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[argon2]>=1.7.4,<2.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "sentry-sdk>=2.27.0,<3.0.0",
    "alembic>=1.15.2,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "geoalchemy2>=0.17.1,<0.18.0",
    "shapely>=2.1.1,<3.0.0",
    "bugsnag>=4.7.1,<5.0.0",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aioboto3 (>=15.0.0,<16.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "authlib (>=1.6.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "aio-pika (>=9.5.7,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
pytest-asyncio = ">=0.26.0,<0.27.0"
faker = ">=37.1.0,<38.0.0"
pytest-factoryboy = ">=2.7.0,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
requests = ">=2.32.3,<3.0.0"
black = "^24.8.0"
ruff = "^0.6.8"
isort = "^6.0.0"

[tool.black]
line-length = 79
target-version = ['py312']
exclude = '''
/(
    \.venv
  | \.git
  | \.idea
  | migrations
  | tests
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = [".venv", "migrations", "tests", "alembic"]

[tool.ruff]
line-length = 79
target-version = "py312"
exclude = [".venv", "migrations", "tests", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C"]
ignore = ["E501", "B008"]